--- a/my-electron-app/package.json
+++ b/my-electron-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calculatrice",
   "version": "1.0.0",
-  "description": "c'est ma calculatrice",
+  "description": "ceci est une calculatrice javascript",
   "main": "index.js",
   "scripts": {
     "start": "electron-forge start",
@@ -11,13 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@electron-forge/cli": "^7.2.0",
-    "@electron-forge/maker-deb": "^7.2.0",
-    "@electron-forge/maker-rpm": "^7.2.0",
-    "@electron-forge/maker-squirrel": "^7.2.0",
-    "@electron-forge/maker-zip": "^7.2.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
-    "electron": "^28.2.0"
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
+    "electron": "^28.3.1"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
